feat(api): implement scheduling management
